# triangle-dg-project

./: .gitignore  Before_After_Formula_Symbol_Notes.md  LICENSE  Manifold_LSRK_3D_Snapshots.ipynb  README.md  deep-research-report.md  face_order_mode_report.md  generate_sbp_chan2019_files.ps1  make_phase4.py  profile.txt  pyproject.toml  requirements.txt
basis/: __init__.py  indexing.py  jacobi.py  simplex2d.py
cli/: __init__.py  plot_lsrk_error_vs_time.py  run_div_h_convergence.py  run_field_h_convergence.py  run_lsrk_h_convergence.py  run_manifold_div_h_convergence.py  run_manifold_lsrk_convergence.py  run_manifold_sbp_chan2019_convergence.py  run_rhs_exchange_benchmark.py
data/: __init__.py  edge_rules.py  rule_registry.py  table1_rules.py  table2_rules.py
demo/: demo_3d_table1.py  demo_3d_table2.py  demo_connectivity_step1.py  demo_differentiation_weighted.py  demo_error_field_table1.py  demo_error_field_table2.py  demo_exchange_step3.py  demo_manifold_divergence_diagnostics.py  demo_plot_mesh_nodes.py  demo_plot_nodes_table1.py  demo_plot_nodes_table2.py  demo_radial_sampling_table2.py  demo_reconstruct_field_table1.py  demo_reconstruct_field_table2.py  demo_sdg_Ainv_T1_stable_check.py  demo_sdg_Ainv_stable_all_patches_check.py  demo_sdg_boundary_flux_balance_check.py  demo_sdg_closed_sphere_lsrk_mass_check.py  demo_sdg_direct_flux_surface_balance_check.py  demo_sdg_divergence_validation.py  demo_sdg_edge_closed_sphere_lsrk_mass_check.py  demo_sdg_edge_corrected_lsrk_mass_check.py  demo_sdg_edge_fast_advection_convergence.py  demo_sdg_edge_fast_advection_convergence_cfl.py  demo_sdg_edge_fast_advection_convergence_cfl_center.py  demo_sdg_edge_fast_lsrk_mass_check.py  (+23 more)
(+389 files in other folders)
