[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triangle-dg-project"
version = "0.1.0"
description = "Triangle-domain polynomial reconstruction and DG-ready operators"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Your Name" }
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "pytest>=7.4"
]

[project.optional-dependencies]
perf = [
    "numba>=0.60"
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["data*", "basis*", "geometry*", "operators*", "problems*", "visualization*", "utils*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]