[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "triangle-dg-project"
version = "0.1.0"
description = "Triangle-domain polynomial reconstruction and DG-ready operators"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4"
]
perf = [
    "numba>=0.60"
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = [
    "basis*",
    "cli*",
    "data*",
    "demo*",
    "experiments*",
    "geometry*",
    "operators*",
    "problems*",
    "time_integration*",
    "utils*",
    "visualization*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
